--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -141,7 +141,7 @@
         <li class="nav-item ng-hide" ng-show="login">
             <a class="nav-link text-body" href="#/registros">
                 <i class="bi bi-card-checklist" style="font-size: 1.25em;"></i>
-                <span class="d-none d-lg-block d-xl-block">Registros</span>
+                <span class="d-none d-lg-block d-xl-block">Calificaciones</span>
             </a>
         </li>    
         </ul>
